src/test/deca/codegen/valid/no-objects/multiple_assign.ass
	TSTO #2
	BOV StackOverflowError
; Main program
; Beginning of main function:
	ADDSP #1
	STORE R0, 1(GB)
	ADDSP #1
	STORE R0, 2(GB)
	LOAD #1, R0
	STORE R0, 2(GB)
	STORE R0, 1(GB)
	WSTR "Ok"
	WNL
; End of main function.
	HALT
; End of main function.
DivisionByZeroError:
	WSTR "Erreur : divison par zéro."
	WNL
	ERROR
StackOverflowError:
	WSTR "Erreur : débordement de la pile."
	WNL
	ERROR
